--- a/media.html
+++ b/media.html
@@ -62,7 +62,7 @@
 		js_menu_3f2be38f.createMenuForItem('menuentry_490d75da', []);
 
 	</script>
-</div></div><span class="textstyle8"><br/><br/></span><div  id="placeh_7a5ef65" >
+</div></div><span class="textstyle8"><br/><br/></span><div id="container_78d6203e"><div id="container_78d6203e_padding" ></div></div><div  id="placeh_7a5ef65" >
   <div class="textstyle1">
 <div id="container_2a64b3ae"><div id="container_2a64b3ae_padding" ><div class="textstyle1"><div id="container_f13da55"><div id="container_f13da55_padding" ><div class="textstyle4"><span class="textstyle9">Photos and Video&#56986;</span><span class="textstyle10"><br/></span><div id="container_250423ca"><div id="container_250423ca_padding" ><div class="textstyle4"><div id="container_56357dc7"><div id="container_56357dc7_padding" ><div class="textstyle4"><span class="textstyle11"> <br/><br/></span><span class="textstyle12"><br/></span><span class="textstyle12">De</span></div>
 </div></div></div>
