--- a/services.html
+++ b/services.html
@@ -62,33 +62,33 @@
 		js_menu_3f2be38f.createMenuForItem('menuentry_490d75da', []);
 
 	</script>
-</div></div><span class="textstyle8"><br/><br/></span><div  id="placeh_7a5ef65" >
+</div></div><span class="textstyle8"><br/><br/></span><div id="container_78d6203e"><div id="container_78d6203e_padding" ></div></div><div  id="placeh_7a5ef65" >
   <div class="textstyle1">
-<div id="container_7330b34f"><div id="container_7330b34f_padding" ><div class="textstyle1"><div id="container_59a0caff"><div id="container_59a0caff_padding" ><div class="textstyle4"><span class="textstyle9"><br/></span><div id="container_5271cb71"><div id="container_5271cb71_padding" ><div class="textstyle4"><div id="container_50693a0d"><div id="container_50693a0d_padding" ><div class="textstyle4"><span class="textstyle10">Services We Offer:</span><span class="textstyle11"><br/></span><ul id="ul_5531188a" class="ulstyle1">
-<li><span class="textstyle11">Commercial Vans or Vehicles&#128656;</span></li>
+<div id="container_7330b34f"><div id="container_7330b34f_padding" ><div class="textstyle1"><div id="container_59a0caff"><div id="container_59a0caff_padding" ><div class="textstyle4"><span class="textstyle9">Services We Offer:</span><span class="textstyle10"><br/></span><ul id="ul_8250a81" class="ulstyle1">
+<li><span class="textstyle10">Commercial Vans or Vehicles&#128656;</span></li>
 </ul>
-    <span class="textstyle11">&nbsp;</span>
-<ul id="ul_1fce3f8f" class="ulstyle1">
-<li>    <span class="textstyle11">Work Trucks &#128667;</span>
+    <span class="textstyle10">&nbsp;</span>
+<ul id="ul_250929e8" class="ulstyle1">
+<li>    <span class="textstyle10">Work Trucks &#128667;</span>
 </li>
 </ul>
-    <span class="textstyle11">&nbsp;</span>
-<ul id="ul_2ee72f7e" class="ulstyle1">
-<li>    <span class="textstyle11">Custom Fleet Solutions &#9989;</span>
+    <span class="textstyle10">&nbsp;</span>
+<ul id="ul_367bebf6" class="ulstyle1">
+<li>    <span class="textstyle10">Custom Fleet Solutions &#9989;</span>
 </li>
 </ul>
-<span class="textstyle11"> <br/><br/></span><span class="textstyle12"><br/></span><span class="textstyle12">De</span></div>
+    <span class="textstyle10">&nbsp;</span>
+    <span class="textstyle11"><br/></span>
+</div>
 </div></div></div>
-<div style="clear:both"></div></div></div><span class="textstyle13"><br/><br/><br/><br/></span><span class="textstyle14"><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/><br/><br/><br/></span></div>
-<div style="clear:both"></div></div></div></div>
 <div style="clear:both"></div></div></div>    </div>
   <div class="textstyle4">
-<span class="textstyle15"><br/></span>    </div>
+<span class="textstyle12"><br/></span>    </div>
 </div>
-<span class="textstyle8"><br/></span><span class="textstyle13"><br/><br/></span><span class="textstyle14"><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/><br/><br/><br/></span></div>
+<span class="textstyle8"><br/></span><span class="textstyle11"><br/><br/></span><span class="textstyle13"><br/><br/><br/></span><span class="textstyle11"><br/><br/><br/><br/><br/><br/></span></div>
 <div style="clear:both"></div></div></div></div>
 <div style="clear:both"></div></div></div>  </div>
 <div class="textstyle4">
-<span class="textstyle15"><br/></span>  </div>
+<span class="textstyle12"><br/></span>  </div>
 </body>
 </html>
