--- a/media.html
+++ b/media.html
@@ -9,73 +9,62 @@
 </head>
 <body>
 <div class="textstyle1">
-<div id="container_eaea99e"><div id="container_eaea99e_padding" ><div class="textstyle1"><div id="container_6a5612c4"><div id="container_6a5612c4_padding" ><div class="textstyle1"><span class="textstyle2"><br/><br/></span><span class="textstyle3"><br/></span></div>
-<div class="textstyle4"><span class="textstyle3"><br/><br/></span>  <span class="textstyle2"> </span>
-</div>
-</div></div><div id="container_22e4a421"><div id="container_22e4a421_padding" ><div class="textstyle4"><div id="menu_3f2be38f"><div  class="menuholder1"><a href="javascript:void(0);">
-	<div id="menuentry_4c93732e"  class="menustyle1 menu_3f2be38f_mainMenuEntry mobileEntry">
+<a href="index.html"><img src="rc_images/semofleetlogo1080.jpg" width="1024" height="390" id="img_3c70b732" alt="" title="" border="0" /></a><span class="textstyle2"><br/></span><div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
-  <span class="textstyle5">&#8801;</span>
+  <span class="textstyle3">&#8801;</span>
 		</div>
 	</div>
 </a>
 <a href="whoweare.html" style="text-decoration:none">
-	<div id="menuentry_5d96740"  class="menustyle2 menu_3f2be38f_mainMenuEntry normalEntry">
+	<div id="menuentry_3b4af324"  class="menustyle2 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle6">Who We Are</span>
+  <span class="textstyle4">Who We Are</span>
 		</div>
 	</div>
 </a>
 <a href="services.html" style="text-decoration:none">
-	<div id="menuentry_10377463"  class="menustyle3 menu_3f2be38f_mainMenuEntry normalEntry">
+	<div id="menuentry_55665f04"  class="menustyle3 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle6">Services We Offer</span>
+  <span class="textstyle4">Services We Offer</span>
 		</div>
 	</div>
 </a>
 <a href="media.html" style="text-decoration:none">
-	<div id="menuentry_4cf5715a"  class="menustyle4 menu_3f2be38f_mainMenuEntry normalEntry">
+	<div id="menuentry_7b322585"  class="menustyle4 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle6">Photos and Video</span>
+  <span class="textstyle4">Photos and Video</span>
 		</div>
 	</div>
 </a>
 <a href="contact.html" style="text-decoration:none">
-	<div id="menuentry_490d75da"  class="menustyle5 menu_3f2be38f_mainMenuEntry normalEntry">
+	<div id="menuentry_4813649a"  class="menustyle5 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle6">Contact Us!</span>
+  <span class="textstyle4">Contact Us</span>
 		</div>
 	</div>
 </a>
 
 	<script type="text/javascript" src="rc_images/wsp_menu.js"></script>
 	<script type="text/javascript">
-		var js_menu_3f2be38f= new wsp_menu('menu_3f2be38f', 'menu_3f2be38f', 10, null, true);
+		var js_menu_12dc9f48= new wsp_menu('menu_12dc9f48', 'menu_12dc9f48', 10, null, true);
 
-		js_menu_3f2be38f.createMenuForItem('menuentry_4c93732e', ["  <span class=\"textstyle7\">Who We Are</span> ", 'whoweare.html', '',
-		                                   "  <span class=\"textstyle7\">Services We Offer</span> ", 'services.html', '',
-		                                   "  <span class=\"textstyle7\">Photos and Video</span> ", 'media.html', '',
-		                                   "  <span class=\"textstyle7\">Contact Us!</span> ", 'contact.html', '']);
-		js_menu_3f2be38f.createMenuForItem('menuentry_5d96740', []);
-		js_menu_3f2be38f.createMenuForItem('menuentry_10377463', []);
-		js_menu_3f2be38f.createMenuForItem('menuentry_4cf5715a', []);
-		js_menu_3f2be38f.createMenuForItem('menuentry_490d75da', []);
+		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle5\">Who We Are</span> ", 'whoweare.html', '',
+		                                   "  <span class=\"textstyle5\">Services We Offer</span> ", 'services.html', '',
+		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", 'media.html', '',
+		                                   "  <span class=\"textstyle5\">Contact Us</span> ", 'contact.html', '']);
+		js_menu_12dc9f48.createMenuForItem('menuentry_3b4af324', []);
+		js_menu_12dc9f48.createMenuForItem('menuentry_55665f04', []);
+		js_menu_12dc9f48.createMenuForItem('menuentry_7b322585', []);
+		js_menu_12dc9f48.createMenuForItem('menuentry_4813649a', []);
 
 	</script>
-</div></div><span class="textstyle8"><br/><br/></span><div id="container_78d6203e"><div id="container_78d6203e_padding" ></div></div><div  id="placeh_7a5ef65" >
+</div></div><div  id="placeh_91ac625" >
   <div class="textstyle1">
-<div id="container_2a64b3ae"><div id="container_2a64b3ae_padding" ><div class="textstyle1"><div id="container_f13da55"><div id="container_f13da55_padding" ><div class="textstyle4"><span class="textstyle9">Photos and Video&#56986;</span><span class="textstyle10"><br/></span><div id="container_250423ca"><div id="container_250423ca_padding" ><div class="textstyle4"><div id="container_56357dc7"><div id="container_56357dc7_padding" ><div class="textstyle4"><span class="textstyle11"> <br/><br/></span><span class="textstyle12"><br/></span><span class="textstyle12">De</span></div>
-</div></div></div>
-<div style="clear:both"></div></div></div><span class="textstyle13"><br/><br/><br/><br/></span><span class="textstyle14"><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/><br/><br/><br/></span></div>
-<div style="clear:both"></div></div></div></div>
-<div style="clear:both"></div></div></div>    </div>
-  <div class="textstyle4">
-<span class="textstyle15"><br/></span>    </div>
+<span class="textstyle6"><br/></span><div id="container_5937bf07"><div id="container_5937bf07_padding" ><div class="textstyle1">    <span class="textstyle7">Photos and Video&#56986;</span>
 </div>
-<span class="textstyle8"><br/></span><span class="textstyle13"><br/><br/></span><span class="textstyle14"><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/><br/><br/><br/></span></div>
-<div style="clear:both"></div></div></div></div>
-<div style="clear:both"></div></div></div>  </div>
-<div class="textstyle4">
-<span class="textstyle15"><br/></span>  </div>
+</div></div>    </div>
+</div>
+  </div>
 </body>
 </html>
