--- a/media.html
+++ b/media.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </a>
-<a href="media.html" style="text-decoration:none">
+<a href="" style="text-decoration:none">
 	<div id="menuentry_7b322585"  class="menustyle4 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle4">Photos and Video</span>
@@ -51,7 +51,7 @@
 
 		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle5\">Who We Are</span> ", 'whoweare.html', '',
 		                                   "  <span class=\"textstyle5\">Services We Offer</span> ", 'services.html', '',
-		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", 'media.html', '',
+		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", '', '',
 		                                   "  <span class=\"textstyle5\">Contact Us</span> ", 'contact.html', '']);
 		js_menu_12dc9f48.createMenuForItem('menuentry_3b4af324', []);
 		js_menu_12dc9f48.createMenuForItem('menuentry_55665f04', []);
@@ -60,10 +60,15 @@
 
 	</script>
 </div></div><div  id="placeh_91ac625" >
-  <div class="textstyle1">
-<span class="textstyle6"><br/></span><div id="container_5937bf07"><div id="container_5937bf07_padding" ><div class="textstyle1">    <span class="textstyle7">Photos and Video&#56986;</span>
+  <div class="textstyle6">
+<div id="container_d7f7436"><div id="container_d7f7436_padding" ><div class="textstyle6"><div id="container_7446523"><div id="container_7446523_padding" ><div class="textstyle1">    <span class="textstyle7">Photos and Video<br/></span>
+    <span class="textstyle8"> </span>
+    <span class="textstyle9"><br/></span>
 </div>
-</div></div>    </div>
+</div></div></div>
+<div style="clear:both"></div></div></div>    </div>
+  <div class="textstyle1">
+<span class="textstyle10"><br/></span>    </div>
 </div>
   </div>
 </body>
