--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </a>
-<a href="media.html" style="text-decoration:none">
+<a href="" style="text-decoration:none">
 	<div id="menuentry_7b322585"  class="menustyle4 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle4">Photos and Video</span>
@@ -51,7 +51,7 @@
 
 		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle5\">Who We Are</span> ", 'whoweare.html', '',
 		                                   "  <span class=\"textstyle5\">Services We Offer</span> ", 'services.html', '',
-		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", 'media.html', '',
+		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", '', '',
 		                                   "  <span class=\"textstyle5\">Contact Us</span> ", 'contact.html', '']);
 		js_menu_12dc9f48.createMenuForItem('menuentry_3b4af324', []);
 		js_menu_12dc9f48.createMenuForItem('menuentry_55665f04', []);
@@ -61,12 +61,11 @@
 	</script>
 </div></div><div  id="placeh_91ac625" >
   <div class="textstyle6">
-<div id="container_61f95e0c"><div id="container_61f95e0c_padding" ><div class="textstyle6"><div id="container_7af0d770"><div id="container_7af0d770_padding" ><div class="textstyle1"><div id="container_21012002"><div class="textstyle1"><span class="textstyle7">SEMO Fleet Sales is owned and operated by Eric and Melodie, out of Cape Girardeau, MO<br/><br/><br/></span><img src="rc_images/icons8_phone_16.png" width="16" height="16" id="img_33793bb5" alt="" title="" /><span class="textstyle7">  (573) 906-7969<br/></span><img src="rc_images/icons8_email_ios_16_filled_16.png" width="16" height="16" id="img_3a41f573" alt="" title="" /><span class="textstyle7">  </span><span class="textstyle7"><a href="mailto:eric@semofleet.com" target="_blank">eric@semofleet.com</a></span><span class="textstyle7"><br/></span><img src="rc_images/icons8_facebook_ios_16_filled_16.png" width="16" height="16" id="img_518a40e6" alt="" title="" /><span class="textstyle7">  </span><span class="textstyle7"><a href="https://www.facebook.com/profile.php?id=61551028208545" target="_blank">Semo Fleet Sales</a></span><span class="textstyle7"><br/><br/><br/>Ready to experience fleet sales like never before? Send us a message or give us a call today.<br/><br/>SEMO and its team are here to answer all your questions and get your business rolling with the perfect fleet.<br/></span></div>
-</div><span class="textstyle8"><br/></span><span class="textstyle9"><br/><br/><br/><br/></span><span class="textstyle10"><br/><br/><br/></span><span class="textstyle9"><br/><br/><br/><br/><br/><br/></span></div>
+<div id="container_14de6854"><div id="container_14de6854_padding" ><div class="textstyle6"><div id="container_28787caa"><div id="container_28787caa_padding" ><div class="textstyle1"><span class="textstyle7">SEMO Fleet Sale</span><span class="textstyle8">s</span><span class="textstyle9"> is owned and operated by Eric and Melodie, based in Cape Girardeau, MO<br/><br/></span><img src="rc_images/icons8_phone_16.png" width="16" height="16" id="img_431272da" alt="" title="" /><span class="textstyle9">  (573) 906-7969<br/></span><img src="rc_images/icons8_email_ios_16_filled_16.png" width="16" height="16" id="img_1227c0aa" alt="" title="" /><span class="textstyle9">  </span><span class="textstyle9"><a href="mailto:eric@semofleet.com" target="_blank">eric@semofleet.com</a></span><span class="textstyle9"><br/></span><img src="rc_images/icons8_facebook_ios_16_filled_16.png" width="16" height="16" id="img_73bda0f4" alt="" title="" /><span class="textstyle9">  </span><span class="textstyle9"><a href="https://www.facebook.com/profile.php?id=61551028208545" target="_blank">Semo Fleet Sales</a></span><span class="textstyle9"><br/><br/>Ready to experience fleet sales like never before? Send us a message or give us a call today.<br/><br/>SEMO and its team are here to answer all your questions and get your business rolling with the perfect fleet.</span><span class="textstyle10">  <br/></span><span class="textstyle11"><br/></span><img src="rc_images/cute_900x1200.jpg" width="900" height="1200" id="img_2cec44a1" alt="" title="" /></div>
 <div style="clear:both"></div></div></div></div>
 <div style="clear:both"></div></div></div>    </div>
   <div class="textstyle1">
-<span class="textstyle11"><br/></span>    </div>
+<span class="textstyle12"><br/></span>    </div>
 </div>
   </div>
 </body>
