--- a/masterpage.html
+++ b/masterpage.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </a>
-<a href="media.html" style="text-decoration:none">
+<a href="" style="text-decoration:none">
 	<div id="menuentry_7b322585"  class="menustyle4 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle4">Photos and Video</span>
@@ -51,7 +51,7 @@
 
 		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle5\">Who We Are</span> ", 'whoweare.html', '',
 		                                   "  <span class=\"textstyle5\">Services We Offer</span> ", 'services.html', '',
-		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", 'media.html', '',
+		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", '', '',
 		                                   "  <span class=\"textstyle5\">Contact Us</span> ", 'contact.html', '']);
 		js_menu_12dc9f48.createMenuForItem('menuentry_3b4af324', []);
 		js_menu_12dc9f48.createMenuForItem('menuentry_55665f04', []);
