--- a/whoweare.html
+++ b/whoweare.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </a>
-<a href="" style="text-decoration:none">
+<a href="media.html" style="text-decoration:none">
 	<div id="menuentry_7b322585"  class="menustyle4 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle4">Photos and Video</span>
@@ -51,7 +51,7 @@
 
 		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle5\">Who We Are</span> ", 'whoweare.html', '',
 		                                   "  <span class=\"textstyle5\">Services We Offer</span> ", 'services.html', '',
-		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", '', '',
+		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", 'media.html', '',
 		                                   "  <span class=\"textstyle5\">Contact Us</span> ", 'contact.html', '']);
 		js_menu_12dc9f48.createMenuForItem('menuentry_3b4af324', []);
 		js_menu_12dc9f48.createMenuForItem('menuentry_55665f04', []);
@@ -61,28 +61,28 @@
 	</script>
 </div></div><div  id="placeh_91ac625" >
   <div class="textstyle6">
-<div id="container_892ebb7"><div class="textstyle6"><div id="container_fb7d91b"><div class="textstyle1"><span class="textstyle7">We are SEMO Fleet Sales! </span><span class="textstyle8">&#128666;</span><span class="textstyle9"><br/></span><div id="container_6d1c74c3"><div class="textstyle1"><div id="container_fb36e63"><div class="textstyle1"><span class="textstyle10">At SEMO Fleet Sales, we redefine convenience in commercial vehicle acquisition! SEMO Fleet Sales is your trusted partner in the world of fleet sales, and we're here to revolutionize how you get the vehicles your business needs. With over 8 years of experience, SEMO knows the ins and outs of the commercial fleet industry like no one else. Our mission is to ensure that you don't have to step foot on a dealership lot to get the perfect vehicles for your business!<br/><br/></span><span class="textstyle11">What Sets Us Apart?</span><span class="textstyle10"><br/></span><ul id="ul_39a13c77" class="ulstyle1">
+<div id="container_376d41f7"><div id="container_376d41f7_padding" ><div class="textstyle6"><div id="container_431c43a0"><div class="textstyle1"><span class="textstyle7">Welcome to SEMO Fleet Sales! </span><span class="textstyle8">&#128666;</span><span class="textstyle9"><br/></span><div id="container_5353c50c"><div id="container_5353c50c_padding" ><div class="textstyle1"><div id="container_1fd9dd1a"><div class="textstyle1"><span class="textstyle10">At SEMO Fleet Sales, we redefine convenience in commercial vehicle acquisition! SEMO Fleet Sales is your trusted partner in the world of fleet sales, and we're here to revolutionize how you get the vehicles your business needs. With over 8 years of experience, SEMO knows the ins and outs of the commercial fleet industry like no one else. Our mission is to ensure that you don't have to step foot on a dealership lot to get the perfect vehicles for your business!<br/><br/></span><span class="textstyle11">What Sets Us Apart:</span><span class="textstyle10"><br/></span><ul id="ul_170f5b97" class="ulstyle1">
 <li><span class="textstyle10">No More Dealership Hassles - Say goodbye to long hours at the dealership. SEMO takes the hassle out of fleet sales by bringing the dealership experience to you.</span></li>
 </ul>
     <span class="textstyle10">&nbsp;</span>
-<ul id="ul_6409f847" class="ulstyle1">
+<ul id="ul_156dcde7" class="ulstyle1">
 <li>    <span class="textstyle10">Tailored Solutions - We understand that every business has unique needs. SEMO works closely with you to find the right vehicles that match your requirements, whether it's one van or an entire fleet.</span>
 </li>
 </ul>
     <span class="textstyle10">&nbsp;</span>
-<ul id="ul_b502759" class="ulstyle1">
+<ul id="ul_71ad055a" class="ulstyle1">
 <li>    <span class="textstyle10">Competitive Pricing - SEMO leverages its industry connections to get you the best deals and pass the savings on to your business.</span>
 </li>
 </ul>
     <span class="textstyle10">&nbsp;</span>
-<ul id="ul_8033757" class="ulstyle1">
-<li><span class="textstyle10">Delivered to You - Your new vehicle is delivered to your door! No dealership visit required - EVER!</span><span class="textstyle2"><br/></span><span class="textstyle2">De</span></div>
-</li>
+<ul id="ul_5355ec6" class="ulstyle1">
+<li><span class="textstyle10">Delivered to You - Your new vehicle is delivered to your door. No dealership visit required!</span></li>
 </ul>
+<span class="textstyle10"><br/></span><span class="textstyle2"><br/></span><span class="textstyle2">De</span></div>
 </div></div>
-</div><span class="textstyle12"><br/><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/></span><span class="textstyle12"><br/><br/><br/><br/><br/><br/></span></div>
+<div style="clear:both"></div></div></div><span class="textstyle12"><br/><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/></span><span class="textstyle12"><br/><br/><br/><br/><br/><br/></span></div>
 </div></div>
-</div>    </div>
+<div style="clear:both"></div></div></div>    </div>
   <div class="textstyle1">
 <span class="textstyle14"><br/></span>    </div>
 </div>
