--- a/services.html
+++ b/services.html
@@ -9,38 +9,40 @@
 </head>
 <body>
 <div class="textstyle1">
-<a href="index.html"><img src="rc_images/semofleetlogo1080.jpg" width="1024" height="390" id="img_3c70b732" alt="" title="" border="0" /></a><span class="textstyle2"><br/></span><div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+<a href="index.html"><img src="rc_images/semofleetlogo1080.jpg" width="1024" height="390" id="img_3c70b732" alt="" title="" border="0" /></a>  </div>
+<div class="textstyle2">
+<span class="textstyle3"><br/></span><div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
-  <span class="textstyle3">&#8801;</span>
+  <span class="textstyle4">&#8801;</span>
 		</div>
 	</div>
 </a>
 <a href="whoweare.html" style="text-decoration:none">
 	<div id="menuentry_3b4af324"  class="menustyle2 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle4">Who We Are</span>
+  <span class="textstyle5">Who We Are</span>
 		</div>
 	</div>
 </a>
 <a href="services.html" style="text-decoration:none">
 	<div id="menuentry_55665f04"  class="menustyle3 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle4">Services We Offer</span>
+  <span class="textstyle5">Services We Offer</span>
 		</div>
 	</div>
 </a>
 <a href="media.html" style="text-decoration:none">
 	<div id="menuentry_7b322585"  class="menustyle4 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle4">Photos and Video</span>
+  <span class="textstyle5">Photos and Video</span>
 		</div>
 	</div>
 </a>
 <a href="contact.html" style="text-decoration:none">
 	<div id="menuentry_4813649a"  class="menustyle5 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
-  <span class="textstyle4">Contact Us</span>
+  <span class="textstyle5">Contact Us</span>
 		</div>
 	</div>
 </a>
@@ -49,10 +51,10 @@
 	<script type="text/javascript">
 		var js_menu_12dc9f48= new wsp_menu('menu_12dc9f48', 'menu_12dc9f48', 10, null, true);
 
-		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle5\">Who We Are</span> ", 'whoweare.html', '',
-		                                   "  <span class=\"textstyle5\">Services We Offer</span> ", 'services.html', '',
-		                                   "  <span class=\"textstyle5\">Photos and Video</span> ", 'media.html', '',
-		                                   "  <span class=\"textstyle5\">Contact Us</span> ", 'contact.html', '']);
+		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'whoweare.html', '',
+		                                   "  <span class=\"textstyle6\">Services We Offer</span> ", 'services.html', '',
+		                                   "  <span class=\"textstyle6\">Photos and Video</span> ", 'media.html', '',
+		                                   "  <span class=\"textstyle6\">Contact Us</span> ", 'contact.html', '']);
 		js_menu_12dc9f48.createMenuForItem('menuentry_3b4af324', []);
 		js_menu_12dc9f48.createMenuForItem('menuentry_55665f04', []);
 		js_menu_12dc9f48.createMenuForItem('menuentry_7b322585', []);
@@ -60,8 +62,8 @@
 
 	</script>
 </div></div><div  id="placeh_91ac625" >
-  <div class="textstyle6">
-<div id="container_7330b34f"><div id="container_7330b34f_padding" ><div class="textstyle6"><div id="container_59a0caff"><div id="container_59a0caff_padding" ><div class="textstyle1"><span class="textstyle7">Services We Offer:</span><span class="textstyle8"><br/></span><ul id="ul_8250a81" class="ulstyle1">
+  <div class="textstyle1">
+<div id="container_7330b34f"><div id="container_7330b34f_padding" ><div class="textstyle1"><div id="container_59a0caff"><div id="container_59a0caff_padding" ><div class="textstyle2"><span class="textstyle7">Services We Offer:</span><span class="textstyle8"><br/></span><ul id="ul_8250a81" class="ulstyle1">
 <li><span class="textstyle8">Commercial Vans or Vehicles&#128656;</span></li>
 </ul>
     <span class="textstyle8">&nbsp;</span>
@@ -79,7 +81,7 @@
 </div>
 </div></div></div>
 <div style="clear:both"></div></div></div>    </div>
-  <div class="textstyle1">
+  <div class="textstyle2">
 <span class="textstyle10"><br/></span>    </div>
 </div>
   </div>
