--- a/services.html
+++ b/services.html
@@ -62,27 +62,23 @@
 
 	</script>
 </div></div><div  id="placeh_91ac625" >
-  <div class="textstyle1">
-<div id="container_7330b34f"><div id="container_7330b34f_padding" ><div class="textstyle1"><div id="container_59a0caff"><div id="container_59a0caff_padding" ><div class="textstyle2"><span class="textstyle7">Services We Offer:</span><span class="textstyle8"><br/></span><ul id="ul_8250a81" class="ulstyle1">
-<li><span class="textstyle8">Commercial Vans or Vehicles&#128656;</span></li>
-</ul>
-    <span class="textstyle8">&nbsp;</span>
-<ul id="ul_250929e8" class="ulstyle1">
-<li>    <span class="textstyle8">Work Trucks &#128667;</span>
-</li>
-</ul>
-    <span class="textstyle8">&nbsp;</span>
-<ul id="ul_367bebf6" class="ulstyle1">
-<li>    <span class="textstyle8">Custom Fleet Solutions &#9989;</span>
-</li>
-</ul>
-    <span class="textstyle8">&nbsp;</span>
-    <span class="textstyle9"><br/></span>
-</div>
-</div></div></div>
-<div style="clear:both"></div></div></div>    </div>
   <div class="textstyle2">
-<span class="textstyle10"><br/></span>    </div>
+<span class="textstyle7"><br/></span><span class="textstyle8">Services We Offer:</span><span class="textstyle9"><br/></span>    <ul id="ul_42787e73" class="ulstyle1">
+      <li><span class="textstyle9">Commercial Vans or Vehicles&#128656;</span>        </li>
+      </ul>
+    <span class="textstyle9">&nbsp;</span>
+    <ul id="ul_4c60c1f9" class="ulstyle1">
+      <li>        <span class="textstyle9">Work Trucks &#128667;</span>
+        </li>
+      </ul>
+    <span class="textstyle9">&nbsp;</span>
+    <ul id="ul_688e5a48" class="ulstyle1">
+      <li>        <span class="textstyle9">Custom Fleet Solutions &#9989;</span>
+        </li>
+      </ul>
+    <span class="textstyle9">&nbsp;</span>
+    <span class="textstyle10"><br/></span>
+    </div>
 </div>
   </div>
 </body>
